--- a/_posts/swift/2021-2-22-frozen.md
+++ b/_posts/swift/2021-2-22-frozen.md
@@ -2,7 +2,7 @@
 layout: post
 title: frozen attribute
 category: Swift
-tags: [@frozen, Attributes]
+tags: [frozen, Attributes]
 comments: true
 ---
 >이 글은 공부 중에 작성하는 글입니다.       
