--- a/_posts/ios/2021-2-23-coredata3.md
+++ b/_posts/ios/2021-2-23-coredata3.md
@@ -449,6 +449,10 @@ extension ViewController: UITableViewDelegate {
                 let cell = self.tableview.cellForRow(at: indexPath)
                 cell?.textLabel?.text = title
                 cell?.detailTextLabel?.text = body
+                
+                // + 셀의 이동과 동시에  reload가 요구된다면 list의 순서도 바꾸어 주어야함. 하지만 remove, insert 하는 것이 안전한 방법은 아닌 것 같다.
+//                let memo = CoreDataSingleton.shared.list.remove(at: selectedMemoIndexPathRow)
+//               CoreDataSingleton.shared.list.insert(memo, at: 0)
 
                 // + 수정된 셀을 첫 번째 행으로 이동시킨다.
                 let firstIndexPath = IndexPath(item: 0, section: 0)
@@ -461,9 +465,11 @@ extension ViewController: UITableViewDelegate {
 }
 ```
 
-이 방법은 list의 배열 순서를 바꾸어주는 방식이 아닌 만들어진 **cell의 위치를 맨 위로 옮겨주는 방식입니다.** <br>
+이 방법은 list의 배열 순서를 바꾸어주는 방식이 아닌 만들어진 **cell의 위치를 맨 위로 옮겨주는 방식입니다.** 배열에는 내부에서 순서를 바꾸는 메서드가 없기 때문에 주석 처리된 코드처럼 remove, insert 를 해주어야 하는데 이는 다소  위험한 방법일 수 있습니다!  <br>
 
->edit 메서드에서 배열을 변경해주는 방법이 있지만 배열에는 내부에서 순서를 바꾸는 메서드가 없기 때문에 배열에서 제거했다가 다시 추가하는 방법으로 구현할 수 있는데 이는 다소 위험한 방법이기에 delegate에서 직접 셀의 위치를 위로  올려주는 코드를 사용하는 것이 안전할 것 같습니다. (애니메이션이 들어가서 더 자연스러운 방법인 것도 같네요!)
+혹시 더 좋은 방법을 알고 계신 분이 있으시다면 알려주시면 감사하겠습니다 :)
+
+
 
 
 
