--- a/_posts/etc/2020-12-30-LLDB.md
+++ b/_posts/etc/2020-12-30-LLDB.md
@@ -72,12 +72,40 @@ comments: true
 - File: 파일 이름과 lind 번호로 breakpoint 추가         
 
 ```swift
-(lldb) br s --file ViewContoller.swift -- line 20
-(lldb) br s -f ViewContoller.swift -- line 20
+(lldb) br s --file ViewContoller.swift --line 20
+(lldb) br s -f ViewContoller.swift --line 20
 ```
+
+<br>
+
+- b(_regexp-break) Command     
+(lldb) regexp-break는 간단하게 Breakpoint를 생성할 수 있도록 도와주는 Shorthand Command 입니다. `(lldb) b`로  줄어서 사용할  수 있습니다.         
+
+```swift
+// 특정 이름을 가진 function에서 break
+(lldb) b viewDidLoad
+
+// 현재 파일 20번째 line에서 break
+(lldb) b 20
+
+// 특정 파일 20번째 line에서 break
+(lldb) b ViewController.swift:12
+
+// 현재 파일 내 특정 text를 포함한 line에서 break
+(lldb) b /stop here/
+
+// 특정 주소값에서 break
+(lldb) b 0x1234000
+```
+
 <br>
 
 - List: breakpoint 리스트 보기        
+`(lldb) breakpoint list` command를 통해 현재 프로그램에 생성되어있는 Breakpoint의 목록을 확인할 수 있습니다. 또한, 이 목록 정보에는 Breakpoint의 id와 이름, hit-count 정보, enable 여부, source 상의 위치, 주소값 등등 유용한 정보가 포함되어있습니다.   <br>
+
+> **hit-count**        
+프로그램 실행 중 활성 상태인 Breakpoint  지점이 실행되면, Debugger는 hit count를 1씩 늘려가며 기록합니다. 하지만 Breakpoint가 걸려있다 하더라도, disable 상태이면 count되지 않습니다.  
+
 
 ```swift
 // breakpoint 목록 전체
@@ -90,7 +118,7 @@ comments: true
 // 특정 id를 가진 breakpoint의 정보만 출력
 (lldb) br list 1
 ```
-<br>
+
 
 - Breakpoint 삭제        
 
@@ -158,6 +186,17 @@ comments: true
 
 ## Expression
 - po: 객체에 대한 정보를 출력         
+업무에서 가장 많이 사용되는 명령어로,  po는   `(lldb) expression -0 --`의 shorthand입니다. 여기서   -O option은 object의 description을 출력하겠다는 뜻입니다. <br>
+
+따라서 객체의 debugDescription을 override하면 커스터마이징한 discription을 출력할 수 있습니다!     
+
+```swift
+class ViewController: UIViewController {
+    override var debugDescription: String {
+        return "DebugDescription: \(super.debugDescription)"
+    }
+}
+```      
 
 ```swift
 (lldb) po <object>
