--- a/_posts/swift/2021-1-16-lazyvar.md
+++ b/_posts/swift/2021-1-16-lazyvar.md
@@ -107,24 +107,14 @@ class Person {
 <br>
 
 ### ✐ nil
-옵셔널 타입의 프로퍼티는 default 값으로 nil이 할당되는 반면, 지연 저장 프로퍼티는 default 값이라는게 없습니다. 따라서 **옵셔널 타입이 불필요하다면** 처음에도, 그 후에도 nil이 들어갈 여지를 만들지 않아도 됩니다. 당연히 옵셔널 바인딩도 필요가 없겠지요?
-
-<br>
-
-### ✐ 값이 변할 가능성
-또 값이 변할 가능성에서 차이가 있습니다. 변수로 옵셔널 타입을 선언해준 경우, 추후에 계속해서 값이 변경될 여지가 있는 반면 지연 저장 프로퍼티로 선언한 경우, 원하는 시점에서 값을 결정하고 상수처럼 고정된 값을 가집니다. <br>
-
-덧붙여서 지연 저장 프로퍼티는 선언할 때에 추후에 초기화될 값이나 클로저를 미리 작성해주어야합니다. 옵셔널 타입으로 선언한 경우에 비해 초기화 값이 유연하지는 못한 것 같군요!
-
-<br>
-
-
--------------------
-
-좀 더 다양한 비교가 가능할 줄 알았는데 나열해보니 몇 가지가 없군요.. ㅎㅎ 하지만 둘의 차이를  명확하게  해야 적절하게 잘 사용할 수 있을 것 같습니다 :)
+옵셔널 타입의 프로퍼티는 default 값으로 nil이 할당되는 반면, 지연 저장 프로퍼티는 default 값이라는게 없습니다. 따라서 **옵셔널 타입이 필요한 상황이 아니라면** 처음에도, 그 후에도 nil이 들어갈 여지를 만들지 않아도 됩니다. 따라서 당연히 옵셔널 바인딩을 해줄 필요도 없겠네요.
 
 <br>
 <br>
+
+
+
+
 
 #### 참고
 - [https://docs.swift.org/swift-book/LanguageGuide/Properties.html](https://docs.swift.org/swift-book/LanguageGuide/Properties.html)
