edit 객체지향의 사실과 오해

--- a/_posts/Writing/2021-7-6-Book - 객체지향의 사실과 오해.md
+++ b/_posts/Writing/2021-7-6-Book - 객체지향의 사실과 오해.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: [Book] 객체지향의 사실과 오해 (feat. 강식당)
+title: Book - 객체지향의 사실과 오해 (feat. 강식당)
 category: Writing
 tags: [OOP, 객체지향]
 comments: true
