edit 객체지향의 사실과 오해

--- a/_posts/Writing/2021-7-6-Book - 객체지향의 사실과 오해.md
+++ b/_posts/Writing/2021-7-6-Book - 객체지향의 사실과 오해.md
@@ -20,7 +20,7 @@ comments: true
  <br>
 
 
- ## 🍗 강식당으로 객체지향 이해하기
+## 🍗 강식당으로 객체지향 이해하기
 
 ![스크린샷 2021-07-06 오후 5 05 35](https://user-images.githubusercontent.com/73867548/124765181-ae633300-df70-11eb-9daa-59a72ce73908.jpg)
 
@@ -48,7 +48,7 @@ comments: true
 
 <br>
 
-## 인터페이스와 구현의 분리 원칙 
+## 🛠 인터페이스와 구현의 분리 원칙 
 위에서 언급한 몇 가지 키워드 외에 인상깊었던 것이 **인터페이스와 구현의 분리 원칙** 이다. 예전에 보았을때는 무슨 말인지 이해를 못했는데 이번에 이해하게 되어서 더 인상깊은 모양이다. 
 
 > 인터페이스와 구현의 분리 원칙이 왜 중요한가? 그것은 소프트웨어는 항상 변경되기 때문이다. 수많은 객체들이 물고 물리며 돌아가는 객체지향 공동체에서 어떤 객체를 수정했을 때 어떤 객체가 영향을 받는지를 판단하는 것은 거의 곡예에 가깝다. 객체의 모든 것이 외부에 공개되어 있다면 아무리 작은 부분을 수정하더라도 변경에 의한 파급효과가 객체 공동체의 구석구석까지 파고들 것이다. *- 책 내용 중에서 (p.169)*
@@ -57,7 +57,7 @@ comments: true
 
 <br>
 
-## 좋은 소프트웨어란?
+## 📱 좋은 소프트웨어란?
 
 > 모든 소프트웨어 제품의 설계에는 두 가지 측면이 존재한다. 하나는 ‘기능(function)’ 측면의 설계, 다른 하나는 ‘구조(structure)’ 측면의 설계다. 훌륭한 기능이 훌륭한 소프트웨어를 만드는 충분조건이라면 훌륭한 구조는 훌륭한 소프트웨어를 만들기 위한 필요조건이다. *- 책 내용 중에서*
 
